@@ -13,10 +13,11 @@ class Quotation
 		User* m_user;
 		Client* m_client;
 		float m_tax;
+		int m_id;
 		std::map<int, Row*> m_rows;
 	
 	public:
-		Quotation(User* user, Client* client, float tax);
+		Quotation(User* user, Client* client, float tax, int id);
 		//transform map
 		//TODO Need Optimisation
 		void addRow(int id, Row* row);
@@ -25,6 +26,7 @@ class Quotation
 		//get-set
 		User* getUser();
 		Client* getClient();
+		int getId();
 		Row* getRow(int id);
 		int getMaxId();
 		float getTax();
